--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+
     <title>TFL TRAVEL</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1' />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, inicial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   </head>
   <body>
     <div id="root"></div>
