--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 
     <title>TFL TRAVEL</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, inicial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   </head>
   <body>
